--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,14 @@
-# Dependencies
-node_modules/
-/.pnp
-.pnp.js
-
-# Testing
-/coverage
-
-# Production
+# React build output
 /build
 
-# Misc
-.DS_Store
+# Dependencies
+node_modules/
+
+# GeoJSON data files
+*.geojson
+*.qgz
+
+# Environment variables
 .env
 .env.local
 .env.development.local
@@ -22,19 +20,25 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# IDE
+# IDE - Visual Studio Code
 .vscode/
+
+# IDE - IntelliJ IDEA
 .idea/
+
+# OS - macOS
+.DS_Store
+
+# OS - Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Testing
+/coverage
+
+# Temporary files
 *.swp
 *.swo
 *~
-
-# OS
-Thumbs.db
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
+.cache/
