--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "colegios-barcametro",
   "version": "1.0.0",
-  "homepage": "https://YOUR_USERNAME.github.io/colegios_cataluna",
+  "homepage": "https://RomanDataLab.github.io/colegios_cataluna",
   "private": true,
   "dependencies": {
     "cors": "^2.8.5",
